# the_sh0w

./: .gitignore  LICENSE  README.md
producer/: Cargo.toml
producer/.cargo/: config.toml
producer/src/: lib.rs  logger.rs  openai_call.rs
show/.cargo/: config.toml
the_pr0ducer/: Cargo.toml
