[package]
name = "producer"
version = "0.1.0"
edition = "2021"


[dependencies]

reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
error-stack = "0.3.0"
json = "0.12.4"
colored = "2"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"